# sqlite-provider

./: .gitignore  Cargo.toml  Makefile
scripts/: locate_sqlite_abi_lib.sh  run_sqlite_provider_py.py
sqlite-provider-abi/: Cargo.toml
sqlite-provider-abi/src/: exports.rs  lib.rs  parser.rs  state.rs  tests.rs
sqlite-provider-abi/tests/: libsqlite3_end_to_end.rs  mock_exec.rs  no_default_features_out_params.rs
sqlite-provider-sqlite3/: Cargo.toml
sqlite-provider-sqlite3/src/: core_impl.rs  extensions_impl.rs  lib.rs
src/: connection.rs  error.rs  function.rs  lib.rs  provider.rs  row.rs  statement.rs  value.rs  vtab.rs
src/connection/: core.rs  extensions.rs  hooks.rs  mod.rs
tests/: integration.rs  python_runner.rs
tests/abi_blackbox/: test_sqlite_abi.py
tests/sqlite_provider_py/: conftest.py  test_concurrency_busy.py  test_json1_hybrid.py  test_transaction_atomicity.py  test_window_cte_integrity.py
