[package]
name = "sqlite-provider"
description = "A Rust crate that provides a high-level, backend-agnostic abstraction layer over the SQLite3 C API"
version = "0.0.2"
authors = ["Xiaoguang Sun <sunxiaoguang@gmail.com>"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]

[dev-dependencies]

[workspace]
members = ["sqlite-provider-abi", "sqlite-provider-sqlite3"]
