[package]
name = "sqlite-provider-abi"
version = "0.0.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
sqlite-provider = { version = "0.0.2", path = ".." }
sqlite-provider-sqlite3 = { version = "0.0.2", path = "../sqlite-provider-sqlite3", optional = true }

[features]
default = ["default-backend"]
default-backend = ["dep:sqlite-provider-sqlite3"]

[dev-dependencies]
