[package]
name = "sqlite-provider-abi"
description = "SQLite3 C ABI shim over a registered `sqlite-provider` backend"
version = "0.0.2"
authors = ["Xiaoguang Sun <sunxiaoguang@gmail.com>"]
license = "BSD-3-Clause"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
sqlite-provider = { version = "0.0.2", path = ".." }
sqlite-provider-sqlite3 = { version = "0.0.2", path = "../sqlite-provider-sqlite3", optional = true }

[features]
default = ["default-backend"]
default-backend = ["dep:sqlite-provider-sqlite3"]

[dev-dependencies]
