[package]
name = "sqlite-provider-sqlite3"
description = "libsqlite3 backed adapter for sqlite-provider"
version = "0.0.2"
authors = ["Xiaoguang Sun <sunxiaoguang@gmail.com>"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
libc = "0.2"
sqlite-provider = { version = "0.0.2", path = ".." }
